--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,9 +51,9 @@
 </footer>
 
 <!-- Scripts -->
-<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"></script>
+<script src="//lib.sinaapp.com/js/jquery/1.12.4/jquery-1.12.4.min.js"></script>
+<script src="//cdn.staticfile.org/highlight.js/9.0.0/highlight.min.js"></script>
+<script src="//cdn.staticfile.org/lightbox/2.6/js/lightbox.min.js"></script>
 <script>
 
 $(document).ready(function() {
