--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -52,8 +52,8 @@
 
 <!-- Scripts -->
 <script src="//lib.sinaapp.com/js/jquery/1.12.4/jquery-1.12.4.min.js"></script>
-<script src="//cdn.staticfile.org/highlight.js/9.0.0/highlight.min.js"></script>
-<script src="//cdn.staticfile.org/lightbox/2.6/js/lightbox.min.js"></script>
+<script src="http://cdn.staticfile.org/highlight.js/9.0.0/highlight.min.js"></script>
+<script src="http://cdn.staticfile.org/lightbox/2.6/js/lightbox.min.js"></script>
 <script>
 
 $(document).ready(function() {
