--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,9 +51,9 @@
 </footer>
 
 <!-- Scripts -->
-<script src="//lib.sinaapp.com/js/jquery/1.12.4/jquery-1.12.4.min.js"></script>
-<script src="http://cdn.staticfile.org/highlight.js/9.0.0/highlight.min.js"></script>
-<script src="http://cdn.staticfile.org/lightbox/2.6/js/lightbox.min.js"></script>
+<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+<script src="//cdn.bootcss.com/highlight.js/9.6.0/highlight.min.js"></script>
+<script src="//cdn.bootcss.com/lightbox2/2.8.2/js/lightbox.min.js"></script>
 <script>
 
 $(document).ready(function() {
@@ -77,18 +77,3 @@ $(document).ready(function() {
 });
 
 </script>
-
-{% if site.ga_tracking_id %}
-<!-- Google Analytics -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', '{{ site.ga_tracking_id }}', 'auto');
-  ga('send', 'pageview', {
-    'page': '{{ page.url }}',
-    'title': '{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}'
-  });
-</script>
-{% endif %}
