--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
   <!-- External libraries -->
   <link rel="stylesheet" href="//cdn.bootcss.com/font-awesome/4.6.3/css/font-awesome.min.css">
-  <link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.6.0/styles/{{ site.highlightjs_theme }}.min.css">
+  <link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/9.6.0/styles/github.min.css">
   <link rel="stylesheet" href="//cdn.bootcss.com/lightbox2/2.8.2/css/lightbox.min.css">
 
   <!-- Favicon and other icons (made with http://www.favicon-generator.org/) -->
